--- a/qrcodes/src/App.css
+++ b/qrcodes/src/App.css
@@ -1,38 +1,38 @@
+@import 'reset-css';
+
 .App {
-  text-align: center;
+  padding: 20px;
+
+  --border-color: #E6EBEE;
+}
+.row {
+  margin-bottom: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.qr-input {
+  padding: 8px;
+  border: 1px solid var(--border-color);
+  border-radius: 2px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main .table-row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+
+  border-bottom: 1px solid var(--border-color);
 }
 
-.App-link {
-  color: #61dafb;
+.table-row {
+  gap: 16px;
+  margin-bottom: 8px;
+  padding-bottom: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cell {
+  flex: 1;
+  padding: 8px;
+}
+
+.cell + .cell {
+  border-left: 1px solid var(--border-color);
 }
